<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>com.trifork.cheetah</groupId>
    <artifactId>cheetah-kafka-authorizer</artifactId>
    <version>strimzi-0.45.0-kafka-3.9.0-trifork-1.7.0</version>
    <packaging>jar</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>17</maven.compiler.release>
        <git.repository>trifork/cheetah-infrastructure-utils-kafka</git.repository>
        <strimzi.kafka.oauth.version>0.15.0</strimzi.kafka.oauth.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.apache.kafka</groupId>
            <artifactId>kafka_2.13</artifactId>
            <version>3.9.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>io.strimzi</groupId>
            <artifactId>kafka-oauth-server</artifactId>
            <version>${strimzi.kafka.oauth.version}</version>
        </dependency>
        <dependency>
            <groupId>io.strimzi</groupId>
            <artifactId>kafka-oauth-client</artifactId>
            <version>${strimzi.kafka.oauth.version}</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.11.4</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>2.0.16</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>local</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <distributionManagement>
                <repository>
                    <id>local-file-repo</id>
                    <name>Local File Artifactory</name>
                    <url>file://${project.basedir}/dist</url>
                </repository>
                <snapshotRepository>
                    <id>local-file-repo</id>
                    <name>Local File Artifactory</name>
                    <url>file://${project.basedir}/dist</url>
                </snapshotRepository>
            </distributionManagement>
        </profile>
        <profile>
            <id>trifork</id>
            <distributionManagement>
                <repository>
                    <id>trifork-github</id>
                    <name>GitHub</name>
                    <url>https://maven.pkg.github.com/${git.repository}</url>
                </repository>
            </distributionManagement>
        </profile>
    </profiles>
</project>
